--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,18 @@
   <artifactId>fest-assert-core</artifactId>
   <version>2.0M10</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/junit/junit -->
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+    <scope>test</scope>
+</dependency>
+
 </dependencies>
+
+<properties>
+	<maven.compiler.source>1.8</maven.compiler.source>
+	<maven.compiler.target>1.8</maven.compiler.target>
+</properties>
 </project>
